# IPC-Broker-Daemon-

./: .gitignore  Cargo.toml  README.md  test_full.sh
c_client/: Makefile  device_c.c
src/: message.rs
